Added visa adding logic